--- a/book.tex
+++ b/book.tex
@@ -16,7 +16,7 @@
 \include{memory}
 \include{live}
 \include{load}
-% \include{practices}
+\include{practices}
 \include{lessons}
 
 % \include{motivation}
