--- a/novice.tex
+++ b/novice.tex
@@ -319,26 +319,39 @@ the learners' mental models and how they might be broken---in short,
 to put themselves into the learners' heads and see the topic from
 their point of view.
 
-\begin{callout}{Why We Don't Assess During Registration}{callout:why-we-dont-assess-during-registration}
-
-Unfortunately, most formal educational systems train people to treat all
-assessment as summative, i.e., to think of every interaction with a
-teacher as an evaluation, rather than as a chance to shape instruction.
-For example, we use a short pre-assessment questionnaire to profile
-learners before workshops to help instructors tune the pace and level of
-material. We send this questionnaire out after people have registered
-rather than making it part of the sign-up process because when we did
-the latter, many people concluded that since they couldn't answer all
-the questions, they shouldn't enrol. We were therefore scaring off many
-of the people we most wanted to help.
-
-\end{callout}
-
 \seclbl{Teaching Practices}{sec:novice-practices}
 
-\subseclbl{Status Flag}{sec:status-flags}
+\fixme{intro to teaching practices}
 
-\fixme{Status Flags}
+\subseclbl{Sticky Notes}{sec:sticky-notes}
+
+Give each learner two sticky notes of different colours, e.g., red and
+green. These can be held up for voting, but their real use is as
+status flags. If someone has completed an exercise and wants it
+checked, they put the green sticky note on their laptop; if they run
+into a problem and need help, the put up the red one. This is better
+than having people raise their hands because:
+
+\begin{itemize}
+
+\item
+  it's more discreet (which means they're more likely to
+  actually do it),
+
+\item
+  they can keep working while their flag is raised, and
+
+\item
+  the instructor can quickly see from the front of the room what
+  state the class is in.
+
+\end{itemize}
+
+Sometimes a red sticky involves a technical problem that takes a bit
+more time to solve. To prevent this issue to slow down the whole class
+too much, you could use the occasion to take the small break you had
+planned to take a bit later, giving the helper(s) time to fix the
+problem.
 
 \subseclbl{Minute Cards}{sec:minute-cards}
 
