--- a/welcome.tex
+++ b/welcome.tex
@@ -184,8 +184,11 @@ even more:
   It gives the more advanced learners in the class something useful to
   do.  Rather than getting bored and checking Twitter during class,
   they often take the lead in recording what's being said, which keeps
-  them engaged (and allows less advanced learners to focus more of
-  their attention on new material).
+  them engaged, and allows less advanced learners to focus more of
+  their attention on new material.  Keeping the more advanced learners
+  busy also helps the whole class stay engaged because boredom is
+  infectious: if a handful of people start updating their Facebook
+  profiles, the people around them will start checking out too.
 
 \item
   The notes the learners take are usually more helpful \emph{to them}
