--- a/book.tex
+++ b/book.tex
@@ -14,7 +14,6 @@
 \include{novice}
 \include{performance}
 \include{memory}
-\include{live}
 \include{load}
 \include{practices}
 \include{lessons}
@@ -25,10 +24,10 @@
 \bibliographystyle{plain}
 \bibliography{book}
 
-% \appendix
-% 
-% \include{conduct}
-% \include{guide}
-% \include{reference}
+\appendix
+
+\include{conduct}
+\include{guide}
+\include{reference}
 
 \end{document}
