--- a/lessons.tex
+++ b/lessons.tex
@@ -233,7 +233,7 @@ used in learning objectives written for each of Bloom's levels.
 
 \begin{tbllbl}{Bloom's Taxonomy}{tbl:bloom}
 
-\begin{tabular}{lll}
+\begin{tabular}{|l|p{\dimexpr 0.4\linewidth-2\tabcolsep}|p{\dimexpr 0.4\linewidth-2\tabcolsep}|}
 Knowledge
 & recalling learned information
 & name, define, recall
@@ -271,7 +271,7 @@ Evaluation
 Another way to understand what makes for a good learning objective
 is to see how a poor one can be improved:
 
-\begin{tabular}{ll}
+\begin{tabular}{|p{\dimexpr 0.5\linewidth-2\tabcolsep}|p{\dimexpr 0.5\linewidth-2\tabcolsep}|}
 
 Learner will be given opportunities to learn good programming practices.
 &
