--- a/practices.tex
+++ b/practices.tex
@@ -1,38 +1,372 @@
-\chaplbl{Teaching Practices}{sec:practices}{15}{30}
+\chaplbl{Live Coding}{sec:practices}{30}{45}
 
-\seclbl{Challenges}{sec:challenges}
+\begin{quote}
+  Teaching is theater not cinema.
+  \\
+  --- Neal Davis
+\end{quote}
 
-\begin{callout}{Why Not a MOOC?}{callout:why-not-a-mooc}
+Teaching is a performance art, just like drama, music, and athletics.
+And as in those fields, we have a collection of small tips and tricks
+to make teaching work better.
+
+The first of our recommended teaching practices is so central that it
+deserves a chapter of its own: live coding.  When they are live
+coding, instructors don't use slides.  Instead, they through the
+lesson material, typing in the code or instructions, with their
+learners following along.  Its advantages are:
+
+\begin{itemize}
+
+\item
+  Watching a program being written is more compelling than watching
+  someone page through slides that present bits and pieces of the same
+  code.
+
+\item
+  It enables instructors to be more responsive to ``what if?''
+  questions. Where a slide deck is like a railway track, live coding
+  allows instructors to go off road and follow their learners'
+  interests.
+
+\item
+  It facilitates lateral knowledge transfer: people learn more than we
+  realized we were teaching by watching \emph{how} instructors do
+  things.
+
+\item
+  It slows the instructor down: if she has to type in the program as
+  she goes along, she can only go twice as fast as her learners,
+  rather than ten-fold faster as she could with slides.
+
+\item
+  Learners get to see instructors' mistakes \emph{and how to diagnose
+  and correct them}. Novices are going to spend most of their time
+  doing this, but it's left out of most textbooks.
+
+\item
+  Watching instructors make mistakes shows learners that it's all
+  right to make mistakes of their.  Most people model the behavior of
+  their teachers: if the instructor isn't embarrassed about making and
+  talking about mistakes, learners will be more comfortable doing so
+  too.
+
+\end{itemize}
+
+Live coding is an example of the ``I/We/You'' approach to teaching
+discussed in \chapref{sec:performance}.  It takes a bit of practice
+for instructors to get used to thinking aloud while coding in front of
+an audience, but most report that it is then no more difficult to do
+than talking off a deck of slides.
+
+\begin{callout}{Double Devices}{callout:double-devices}
+
+Many instructors now use two devices when teaching: a laptop plugged
+into the projector for learners to see, and a tablet beside it on
+which they can view their notes and the shared notes that the learners
+are taking.  This seems to be more reliable than displaying one
+virtual desktop while flipping back and forth to another.
+
+\end{callout}
+
+Here are some tips to make your live coding better:
+
+\begin{enumerate}
+
+\item
+  \emph{Be seen and heard.}  If you are physically able to stand up
+  for a couple of hours, do it while you are teaching. When you sit
+  down, you are hiding yourself behind others for those sitting in the
+  back rows. Make sure to notify the workshop organizers of your wish
+  to stand up and ask them to arrange a high table, standing desk, or
+  lectern.
+
+  Regardless of whether you are standing or sitting, make sure to move
+  around as much as reasonable. You can for example go to the screen
+  to point something out, or draw something on the white/blackboard
+  (see below). Moving around makes the teaching more lively, less
+  monotonous.  It draws the learners' attention away from their
+  screens, to you, which helps get the point you are making across.
+
+  Even though you may have a good voice and know how to use it well,
+  it may be a good idea to use a microphone, especially if the
+  workshop room is equipped with one. Your voice will be less tired,
+  and you increase the chance of people with hearing difficulties
+  being able to follow the workshop.
+
+\item
+  \emph{Take it slow.}  For every command you type, every word of code
+  you write, every menu item or website button you click, say out loud
+  what you are doing while you do it. Then point to the command and
+  its output on the screen and go through it a second time. This not
+  only slows you down, it allows learners who are following along to
+  copy what you do, or to catch up, even when they are looking at
+  their screen while doing it. If the output of your command or code
+  makes what you just typed disappear from view, scroll back up so
+  learners can see it again - this is especially needed for the Unix
+  shell lesson.
+
+  Other options are to execute the same command a second time, or to
+  copy and paste the last command(s) into the workshop's shared notes.
+
+\item
+  \emph{Mirror your learner's environment as much as possible.}  You
+  may have set up your environment to your liking, with a very simple
+  or rather fancy Unix prompt, colour schemes for your development
+  environment, keyboard shortcuts etc. Your learners usually won't
+  have all of this. Try to create an environment that mirrors what
+  your learners have, and avoid using keyboard shortcuts. Some
+  instructors create a separate `bare-bone' user (login) account on
+  their laptop, or a separate `teaching-only' account on the service
+  being taught (e.g., Github).
+
+\item
+  \emph{Use the screen wisely.}  Use a big font, and maximize the
+  window. A black font on a white background works better than a light
+  font on a dark background. When the bottom of the projector screen
+  is at the same height, or below, the heads of the learners, people
+  in the back won't be able to see the lower parts. Draw up the bottom
+  of your window(s) to compensate.
+
+  If you can get a second screen, use it! It will usually require its
+  own PC or laptop, so you may need to ask a helper to control it. You
+  could use the second screen to show the Etherpad content, or the
+  lesson material, or illustrations.
+
+  Pay attention to the lighting (not too dark, no lights directly
+  on/above the presenter's screen) and if needed, reposition the
+  tables so all learners can see the screen, and helpers can easily
+  reach all learners.
+
+\item
+  \emph{Use illustrations.}  Most lesson material comes with
+  illustrations, and these may help learners to understand the stages
+  of the lesson and to organize the material. What can work really
+  well is when you as instructor generate the illustrations on the
+  white/blackboard as you progress through the material. This allows
+  you to build up diagrams, making them increasingly complex in
+  parallel with the material you are teaching. It helps learners
+  understand the material, makes for a more lively workshop (you'll
+  have to move between your laptop and the blackboard) and gathers the
+  learners' attention to you as well.
+
+\item
+  \emph{Avoid distractions.}  Turn off any notifications you may use
+  on your laptop, such as those from social media, email, etc. Seeing
+  notifications flash by on the screen distracts you as well as the
+  learners - and may even result in awkward situations when a message
+  pops up you'd rather not have others see.
+
+\item
+  \emph{Improvise after you know the material.}  The first time you
+  teach a new lesson, you should stick fairly closely to the topics it
+  lays out and the order they're in.  It may be tempting to deviate
+  from the material because you would like to show a neat trick, or
+  demonstrate some alternative way of doing something. Don't do this,
+  since there is a fair chance you'll run into something unexpected
+  that you then have to explain.
+
+  Once you are more familiar with the material, though, you can and
+  should start improvising based on the backgrounds of your learners,
+  their questions in class, and what you find most interesting about
+  the lesson.  This is like a musician playing a new song: the first
+  few times, you stick to the sheet music, but after you're
+  comfortable with it, you can start to put your own stamp on it.
+
+  If you really want to use something outside of the material, try it
+  out thoroughly before the workshop: run through the lesson as you
+  would during the actual teaching and test the effect of your
+  modification.
+
+  Some instructors use printouts of the lesson material during
+  teaching.  Others use a second device (tablet or laptop) when
+  teaching, on which they can view their own notes and the shared
+  notes the learners are taking. This seems to be more reliable than
+  displaying one virtual desktop while flipping back and forth to
+  another.
+
+\item
+  \emph{Embrace mistakes.}
+
+  No matter how well prepared you are, you will be making
+  mistakes. Typo's are hard to avoid, you may overlook something from
+  the lesson instructions, etc. This is OK! It allows learners to see
+  instructors' mistakes and how to diagnose and correct them. Some
+  mistakes are actually an opportunity to point something out, or
+  reflect back on something covered earlier. Novices are going to
+  spend most of their time making the same and other mistakes, but how
+  to deal with them is left out of most textbooks.
+
+  \begin{quote}
+    The typos are the pedagogy.
+    \\
+    --- Emily Jane McTavish
+  \end{quote}
+
+\item
+  \emph{Have fun.}  Teaching is performance art and can be rather
+  serious business. On the one hand, don't let this scare you - it is
+  much easier than performing Hamlet. You have an excellent script at
+  your disposal, after all! On the other hand, it is OK to add an
+  element of `play', i.e. use humor and improvisation to liven up the
+  workshop. How much you are able and willing to do this is really a
+  matter of personality and taste - as well as experience. It becomes
+  easier when you are more familiar with the material, allowing you to
+  relax more. Choose your words and actions wisely, though. Remember
+  that we want the learners to have a welcoming experience and a
+  positive learning environment - a misplaced joke can ruin this in an
+  instant. Start small, even just saying `that was fun' after
+  something worked well is a good start. Ask your co-instructors and
+  helpers for feedback when you are unsure of the effect you behaviour
+  has on the workshop.
+
+\end{enumerate}
+
+\seclbl{Pre-Assessment}{sec:practices-assessment}
+
+Most formal educational systems train people to treat all assessment
+as summative, i.e., to think of every interaction with a teacher as an
+evaluation, rather than as a chance to shape instruction.  For
+example, we use a short pre-assessment questionnaire to profile
+learners before workshops to help instructors tune the pace and level
+of material. We send this questionnaire out after people have
+registered rather than making it part of the sign-up process because
+when we did the latter, many people concluded that since they couldn't
+answer all the questions, they shouldn't enrol. We were therefore
+scaring off many of the people we most wanted to help.
+
+Instead of asking people how easily they could complete specific tasks,
+we could just ask them to rate their knowledge of various subjects on a
+scale from 1 to 5. However, self-assessments of this kind are usually
+inaccurate because of the
+\href{https://en.wikipedia.org/wiki/Dunning\%E2\%80\%93Kruger\_effect}{Dunning-Kruger
+effect}: the less people know about a subject, the less accurate their
+estimate of their knowledge is.
+
+That said, there \emph{are} things we can do:
+
+\begin{itemize}
+
+\item
+  Before running a workshop, communicate its level clearly to everyone
+  who's thinking of signing up by listing the topics that will be
+  covered and showing a few examples of exercises that people will be
+  asked to complete.
+
+\item
+  Provide multiple exercises for each teaching episode so that more
+  advanced learners don't finish early and get bored.
+
+\item
+  Ask more advanced learners to help people next to them. They'll
+  learn from answering their peers' questions (since it will force
+  them to think about things in new ways).
+
+\item
+  The helpers and the instructor who isn't teaching the particular
+  episode should keep an eye out for learners who are falling behind
+  and intervene early so that they don't become frustrated and give
+  up.
+
+\end{itemize}
+
+The most important thing is to accept that no class can possibly meet
+everyone's individual needs. If the instructor slows down to accommodate
+two people who are struggling, the other 38 are not being well served.
+Equally, if she spends a few minutes talking about an advanced topic
+because two learners are bored, the 38 who don't understand it will feel
+left out. All we can do is tell our learners what we're doing and why,
+and hope that they'll understand.
+
+\seclbl{Setup}{sec:practices-setup}
+
+Learners tell us that it is important to them to leave the workshop
+with their own machine set up to do real work. We therefore continue
+to teach on all three major platforms (Linux, Mac OS X, and Windows),
+even though it would be simpler to require learners to use just one.
+
+\fixme{Talk about getting learners' machines set up.}
+
+\begin{callout}{Virtual Machines}{callout:practices-vm}
+
+We have experimented with virtual machines (VMs) on learners'
+computers to reduce installation problems, but those introduce
+problems of their own: older or smaller machines simply aren't fast
+enough, and learners often struggle to switch back and forth between
+two different sets of keyboard shortcuts for things like copying and
+pasting.
+
+Some instructors use VPS over SSH or web browser pages instead. This
+solve the installation issues, but makes us dependent on host
+institutions' WiFi (which can be of highly variable quality), and has
+the issues mentioned above with things like keyboard shortcuts.
+
+\end{callout}
+
+\seclbl{Teaching Online}{sec:online}
 
 Many learners find it difficult to get to a workshop, either because
 there isn't one locally or because it's difficult to schedule time
-around other commitments, so why don't we create video recordings of the
-lessons and offer the workshop as a MOOC (Massive Open Online Course)?
+around other commitments, so why don't we create video recordings of
+the lessons and offer the workshop as a MOOC (Massive Open Online
+Course)?
 
 The first answer is that we did in 2010-11, but found the maintenance
-costs unsustainable. Making a small change to this webpage only takes a
-few minutes. but making \emph{any} change to a video takes an hour or
-more. In addition, most people are much less comfortable recording
+costs unsustainable. Making a small change to this webpage only takes
+a few minutes. but making \emph{any} change to a video takes an hour
+or more. In addition, most people are much less comfortable recording
 themselves than contributing written material.
 
 The second answer is that doing significantly outperforms watching.
-Specifically, a
-recent paper by Koedinger et al \cite{bib:koedinger-doing-watching}
-estimated ``\ldots{}the learning benefit from
-extra doing (1 SD increase) to be more than six times that of extra
-watching or reading.'' \emph{Doing}, in this case, refers to completing
-an interactive or mimetic task with feedback, while \emph{benefit}
-refers to both \emph{completion rates} and \emph{overall performance}.
+Specifically, a recent paper by Koedinger et
+al \cite{bib:koedinger-doing-watching} estimated ``{\ldots}the
+learning benefit from extra doing (1 SD increase) to be more than six
+times that of extra watching or reading.'' \emph{Doing}, in this case,
+refers to completing an interactive or mimetic task with feedback,
+while \emph{benefit} refers to both \emph{completion rates}
+and \emph{overall performance}.
 
-And while we do not (yet) have empirical data, we believe very strongly
-that many novices would give up in despair if required to debug setup
-and installation lessons on their own, but are more likely to get past
-these obstacles if someone is present to help them.
+And while we do not (yet) have empirical data, we believe very
+strongly that many novices would give up in despair if required to
+debug setup and installation lessons on their own, but are more likely
+to get past these obstacles if someone is present to help them.
 
-An intermediate approach that we are experimenting with is real-time
+An intermediate approach that has proven quite successful is real-time
 remote instruction, in which the learners are co-located at one (or a
 few) sites, with helpers present, while the instructor(s) teaching via
 online video. This model has worked well for this instructor training
-course, and for a handful of regular workshops, but more work is needed
-to figure out its pros and cons.
-\end{callout}
+course, and for a handful of regular workshops, but more work is
+needed to figure out its pros and cons.
+
+\seclbl{Challenges}{sec:practices-challenges}
+
+\begin{challenge}{The Bad and the Good}{chal:practices-bad-and-good}
+
+Watch this video of
+\href{https://youtu.be/bXxBeNkKmJE}{live coding done poorly}
+and this video of
+\href{https://youtu.be/SkPmwe\_WjeY}{live coding done right}
+as a group and then summarize your feedback on both using the usual
+$2{\times}2$ grid.  These videos assume learners know what a shell
+variable is, know how to use the \texttt{head} command, and are
+familiar with the contents of the data files being filtered.
+
+\end{challenge}
+
+\begin{challenge}{See Then Do}{chal:practices-live}
+
+Teach 3-4 minutes of your chosen lesson episode using live coding to a
+fellow trainee, then swap and watch while that person live codes for
+you. Don't bother trying to record the live coding sessions---we have
+found that it's difficult to capture both the person and the screen
+with a handheld device---but give feedback the same way you have
+previously (positive and negative, content and presentation). If you
+decide to instead teach something from the lesson episode you selected
+in preparation for this workshop, explain in advance to your fellow
+trainee what you will be teaching and what the learners you teach it
+to are expected to be familiar with.
+
+How does live coding feel compared to other kinds of teaching you have
+done?  What is different, and what is the same?
+
+\end{challenge}
