--- a/book.tex
+++ b/book.tex
@@ -17,8 +17,7 @@
 \include{load}
 \include{practices}
 \include{lessons}
-
-% \include{motivation}
+\include{motivation}
 % \include{carpentries}
 
 \bibliographystyle{plain}
