Cutting down the guide (24018 words)

--- a/load.tex
+++ b/load.tex
@@ -38,16 +38,21 @@ learning:
 
 \item
   \emph{Intrinsic} load is what people have to keep in mind in order to
-  carry out a learning task.
+  carry out a learning task.  In a programming class, this might be
+  understanding what a variable is, or understanding how assignment in
+  a programming language is different from creating a reference to a
+  cell in a spreadsheet.
 
 \item
   \emph{Germane} load is the (desirable) mental effort required to
   create linkages between new information and old (which is one of the
-  things that distinguishes learning from memorization).
+  things that distinguishes learning from memorization).  An example
+  might be learning how to loop through a collection in Python.
 
 \item
   \emph{Extraneous} load is everything else that distracts or gets in
-  the way.
+  the way, such as knowing that tabs look like multiple characters but
+  only count as one when indenting Python code.
 
 \end{itemize}
 
@@ -173,11 +178,33 @@ functions to call.
 It's very common for programs to count how many things fall into
 different categories: for example, how many times different colors
 appear in an image, or how many times different words appear in a
-paragraph of text.  Create a short example (no more than 10 lines of
-code) that shows people how to do this, and then create a second
-example that solves a similar problem in a similar way, but has a
-couple of blanks for learners to fill in.  How did you decide what to
-fade out?  What would the next example in the series be?
+paragraph of text.
+
+\begin{enumerate}
+
+\item
+  Create a short example (no more than 10 lines of code) that shows
+  people how to do this, and then create a second example that solves
+  a similar problem in a similar way, but has a couple of blanks for
+  learners to fill in.  How did you decide what to fade out?  What
+  would the next example in the series be?
+
+\item
+  Define the audience for your examples. For example, are these
+  beginners who only know some basics programming concepts? Or are
+  these learners with some experience in programming but not in
+  Python?
+
+\item
+  Show your example to a partner, but do \emph{not} tell them what
+  level it is intended for.  Once they have filled in the blanks, ask
+  them what level they think it is for.
+
+\end{enumerate}
+
+If there are people among the trainees who don't program at all, make
+sure that they are in separate groups and ask to the groups to work
+with that person as a learner to help identify different loads.
 
 \end{challenge}
 
