--- a/motivation.tex
+++ b/motivation.tex
@@ -493,3 +493,15 @@ complete was your list of challenges? And did you notice that the first
 sentence in this challenge assumed you could actually walk?
 
 \end{challenge}
+
+\begin{challenge}{Who Decides?}{chal:who-decides}
+
+In Littky and Grabelle's
+\emph{The Big Picture: Education is Everyone's Business} \cite{bib:littky-big-picture},
+Kenneth Wesson wrote, ``If poor inner-city children consistently
+outscored children from wealthy suburban homes on standardized tests,
+is anyone naive enough to believe that we would still insist on using
+these tests as indicators of success?'' What are examples in your own
+experience of ``objective'' assessments that reinforce the status quo?
+
+\end{challenge}
