--- a/practices.tex
+++ b/practices.tex
@@ -366,7 +366,25 @@ in preparation for this workshop, explain in advance to your fellow
 trainee what you will be teaching and what the learners you teach it
 to are expected to be familiar with.
 
-How does live coding feel compared to other kinds of teaching you have
-done?  What is different, and what is the same?
+\begin{itemize}
+
+  \item
+    What felt different about live coding (vs.~standing up and
+    lecturing)? What was harder/easier?
+
+  \item
+    Did you make any mistakes? If so, how did you handle them?
+
+  \item
+    Did you talk and type at the same time, or alternate?
+
+  \item
+    How often did you point at the screen? How often did you highlight
+    with the mouse?
+
+  \item
+    What will you try to do differently next time?
+
+\end{itemize}
 
 \end{challenge}
