Starting to fill in bibliography

--- a/book.bib
+++ b/book.bib
@@ -8,9 +8,13 @@
   title = "FIXME"
 }
 
-@misc{bib:baume-fixme,
-  author = "FIXME",
-  title = "FIXME"
+@article{bib:baume-fixme,
+  author={D. Baume},
+  title={Writing and using good learning outcomes},
+  publisher={Leeds Metropolitan University Press},
+  isbn={978-0-9560099-5-1},
+  year={2009},
+  annotate={A useful detailed guide to constructing useful learning outcomes.}
 }
 
 @misc{bib:carroll-minimal-manual,
@@ -59,9 +63,14 @@
   title = "FIXME"
 }
 
-@misc{bib:green-babt,
-  author = "FIXME",
-  title = "FIXME"
+@book{bib:green-babt,
+  title={Building a Better Teacher: How Teaching Works (and How to Teach It to Everyone)},
+  author={Green, E.},
+  isbn={9780393244151},
+  year={2014},
+  publisher={W. W. Norton},
+  annotate={A well-written look at why educational reforms in the past
+   50 years have mostly missed the mark, and what we should be doing instead.}
 }
 
 @misc{bib:guzdial-hard,
@@ -79,9 +88,21 @@
   title = "FIXME"
 }
 
-@misc{bib:henderson-facilitating,
-  author = "FIXME",
-  title = "FIXME"
+@article{bib:henderson-facilitating,
+  author = {Charles Henderson and Andrea Beach and Noah Finkelstein},
+  title = {Facilitating change in undergraduate STEM instructional practices: An analytic review of the literature},
+  journal = {Journal of Research in Science Teaching},
+  volume = {48},
+  number = {8},
+  publisher = {Wiley},
+  issn = {1098-2736},
+  url = {http://dx.doi.org/10.1002/tea.20439},
+  doi = {10.1002/tea.20439},
+  pages = {952--984},
+  year = {2011},
+  annotate={Describes eight approaches to effecting change in STEM education that
+    form a useful framework for thinking about how free-range workshops can go
+    mainstream.}
 }
 
 @misc{bib:koedinger-doing-watching,
@@ -109,6 +130,17 @@
   title = "FIXME"
 }
 
+@book{bib:scott-state,
+  title={Seeing Like a State: How Certain Schemes to Improve the Human Condition Have Failed},
+  author={Scott, J.C.},
+  isbn={9780300128789},
+  year={1999},
+  publisher={Yale University Press},
+  annotate={Presents a compelling case that centrally-managed, top-down ventures
+    will always be less effective than grassroots alternatives because large
+    organizations consistently prefer uniformity over productivity.}
+}
+
 @misc{bib:stefik-fixme,
   author = "FIXME",
   title = "FIXME"
@@ -119,7 +151,11 @@
   title = "FIXME"
 }
 
-@misc{bib:wiggins-mctighe,
-  author = "FIXME",
-  title = "FIXME"
+@book{bib:wiggins-mctighe,
+  title={Understanding by Design},
+  author={G.P. Wiggins and J. McTighe},
+  isbn={9781416600350},
+  year={2005},
+  publisher={Association for Supervision and Curriculum Development},
+  annotate={A lengthy presentation of reverse instructional design.}
 }
