--- a/book.tex
+++ b/book.tex
@@ -20,7 +20,7 @@
 \include{lessons}
 \include{motivation}
 
-\bibliographystyle{plain}
+\bibliographystyle{annotate}
 \bibliography{book}
 
 \appendix
@@ -28,6 +28,5 @@
 \include{conduct}
 \include{checklists}
 \include{guide}
-\include{reference}
 
 \end{document}
