--- a/lessons.tex
+++ b/lessons.tex
@@ -46,8 +46,8 @@ work and really, really wants to be done.
 A similar ``backward'' method works very well for lesson design.  This
 method is something called \emph{reverse instructional design} or
 \emph{understanding by design} (after a book by Wiggins and McTighe
-with that name \cite{fixme}).  There are several variations, but the
-one we recommend has the following steps:
+with that name \cite{bib:wiggins-mctighe}).  There are several
+variations, but the one we recommend has the following steps:
 
 \begin{enumerate}
 
@@ -112,10 +112,10 @@ assessments directly affect the teachers' pay and promotion.
 Green's \emph{Building a Better Teacher} argues that this focus on
 measurement is appealing to those with the power to set the tests, but
 is unlikely to improve outcomes unless it is coupled with support for
-teachers to make improvements based on test outcomes \cite{fixme}.
-This is often missing, because as Scott pointed out in \emph{Seeing
-Like a State}, large organizations usually value uniformity over
-productivity \cite{fixme}.
+teachers to make improvements based on test outcomes
+\cite{bib:green-babt}.  This is often missing, because as Scott
+pointed out in \cite{bib:scott-state}, large organizations usually
+value uniformity over productivity.
 
 \end{callout}
 
